force-app/main/default/objects/numm__Stock_Inventaire__c/numm__Stock_Inventaire__c.object-meta.xml
<CustomObject>
    <label>Stock Inventaire</label>
    <nameField>
        <displayFormat>SI{0000}</displayFormat>
        <label>Nom de Stock Inventaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Inventaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>