force-app/main/default/objects/numm__Stock_Inventaire__c/fields/numm__Commentaire__c.field-meta.xml
<CustomField>
    <fullName>numm__Commentaire__c</fullName>
    <label>Commentaire</label>
    <type>TextArea</type>
</CustomField>