force-app/main/default/objects/numm__Stock_Inventaire__c/fields/numm__Horodatage__c.field-meta.xml
<CustomField>
    <fullName>numm__Horodatage__c</fullName>
    <label>Horodatage</label>
    <type>DateTime</type>
</CustomField>