force-app/main/default/objects/numm__Stock_Inventaire__c/fields/numm__Inventaire__c.field-meta.xml
<CustomField>
    <fullName>numm__Inventaire__c</fullName>
    <label>Inventaire</label>
    <referenceTo>numm__Inventaire__c</referenceTo>
    <relationshipLabel>Stock Inventaire</relationshipLabel>
    <relationshipName>Stock_Inventaire</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>