force-app/main/default/objects/numm__Stock_Inventaire__c/fields/numm__Mouvement_de_stock__c.field-meta.xml
<CustomField>
    <fullName>numm__Mouvement_de_stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mouvement de stock</label>
    <referenceTo>numm__stockMovement__c</referenceTo>
    <relationshipLabel>Stock Inventaire</relationshipLabel>
    <relationshipName>Stock_Inventaire</relationshipName>
    <type>Lookup</type>
</CustomField>