force-app/main/default/objects/numm__Stock_Inventaire__c/fields/numm__Quantit_en_stock__c.field-meta.xml
<CustomField>
    <fullName>numm__Quantit_en_stock__c</fullName>
    <label>Quantité en stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>