force-app/main/default/objects/numm__Stock_Inventaire__c/fields/numm__Quantit_inventaire__c.field-meta.xml
<CustomField>
    <fullName>numm__Quantit_inventaire__c</fullName>
    <label>Quantité inventaire</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>