force-app/main/default/objects/numm__Stock_Inventaire__c/fields/numm__Statut__c.field-meta.xml
<CustomField>
    <fullName>numm__Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En attente</fullName>
                <default>true</default>
                <label>En attente</label>
            </value>
            <value>
                <fullName>Conforme</fullName>
            </value>
            <value>
                <fullName>Non Conforme</fullName>
            </value>
            <value>
                <fullName>Perdu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>