force-app/main/default/objects/numm__Stock_Inventaire__c/fields/numm__Stock__c.field-meta.xml
<CustomField>
    <fullName>numm__Stock__c</fullName>
    <label>Stock</label>
    <referenceTo>numm__Stock__c</referenceTo>
    <relationshipLabel>Stock Inventaire</relationshipLabel>
    <relationshipName>Stock_Inventaire</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>